// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Component Trades Tests should render the elements as is 1`] = `
<div>
  <div
    style={
      Object {
        "marginTop": "-4em",
      }
    }
  >
    <div>
      <div>
        <div>
           
          <div>
            Trade ID:
            <div>
              TEST
            </div>
          </div>
          <br />
          <div>
            Reference Number:
            <div>
              TEST
            </div>
          </div>
          <br />
          <div>
            Ticker:
            <div>
              TEST
            </div>
          </div>
          <br />
          <div>
            Company Name:
            <div>
              TEST
            </div>
          </div>
          <br />
          <br />
        </div>
        <div>
          <div>
            TEST
          </div>
          <br />
          <div>
            <div>
              Bought
            </div>
            <div>
              Short
            </div>
            <div>
              Not Fulfilled
            </div>
            <div>
              Sun Dec 17
            </div>
            <br />
            <div>
              <div>
                Total Cost: $
                0
              </div>
              <div>
                Unit Price: $
                0
              </div>
              <div>
                Quantity: 
                0
              </div>
            </div>
            <div>
              <div
                id="update-button"
              >
                ⇪
              </div>
              <div
                id="delete-button"
                onClick={[Function]}
              >
                ⊗
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      Next 
      ⇢
    </div>
    <div>
      ⇠
       Prev
    </div>
  </div>
</div>
`;

exports[`Modal Component Trades Tests should render the grayed out version of the next button if the current trades are empty 1`] = `ShallowWrapper {}`;

exports[`Modal Component Trades Tests should render the the next button if the trade length is > 1 1`] = `ShallowWrapper {}`;

exports[`Modal Component Trades Tests should render the the prev button if the current page is > 1 1`] = `ShallowWrapper {}`;

exports[`Modal Component Trades Tests should render the the prev button if the current page is > 1 2`] = `ShallowWrapper {}`;

exports[`Modal Component Trades Tests should render the trade's elements with 'long' and 'Fulfilled' 1`] = `
<div>
  <div
    style={
      Object {
        "marginTop": "-4em",
      }
    }
  >
    <div>
      <div>
        <div>
           
          <div>
            Trade ID:
            <div>
              TEST
            </div>
          </div>
          <br />
          <div>
            Reference Number:
            <div>
              TEST
            </div>
          </div>
          <br />
          <div>
            Ticker:
            <div>
              TEST
            </div>
          </div>
          <br />
          <div>
            Company Name:
            <div>
              TEST
            </div>
          </div>
          <br />
          <br />
        </div>
        <div>
          <div>
            TEST
          </div>
          <br />
          <div>
            <div>
              Sold
            </div>
            <div>
              Long
            </div>
            <div>
              Fulfilled
            </div>
            <div>
              Wed Feb 10
            </div>
            <br />
            <div>
              <div>
                Total Cost: $
                0
              </div>
              <div>
                Unit Price: $
                0
              </div>
              <div>
                Quantity: 
                0
              </div>
            </div>
            <div>
              <div
                id="update-button"
              >
                ⇪
              </div>
              <div
                id="delete-button"
                onClick={[Function]}
              >
                ⊗
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      Next 
      ⇢
    </div>
    <div>
      ⇠
       Prev
    </div>
  </div>
</div>
`;
